--- a/app/src/main/res/layout/activity_encrypt_details_minikey.xml
+++ b/app/src/main/res/layout/activity_encrypt_details_minikey.xml
@@ -1,84 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".activities.ActivityInfo">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen"
+    tools:context=".activities.ActivityInfo">
+
+    <TextView
+        android:id="@+id/activity_encrypt_details_plain_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:layout_weight="0"
+        android:gravity="center"
+        android:text="@string/encrypt_details_minikey"
+        android:textAppearance="@style/font_title_alice" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_screen">
+        android:layout_height="@dimen/height_min_textbox_fullscreen"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/activity_encrypt_details_minikey_lastKey"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_distance"
+            android:text="@string/lastKey" />
 
         <TextView
-            android:id="@+id/activity_encrypt_details_minikey_title"
+            android:id="@+id/activity_encrypt_details_minikey_generatedKey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/encrypt_details_minikey"
-            android:textAppearance="@style/font_explanation_default"
-            android:textSize="24sp" />
+            android:minHeight="@dimen/height_min_textbox"
+            android:textAppearance="@style/font_msg_default" />
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
+            android:text="@string/or"
+            android:textAppearance="@style/font_explanation_default" />
 
-            <Button
-                android:id="@+id/activity_encrypt_details_minikey_lastKey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_distance"
-                android:text="@string/lastKey" />
+        <TextView
+            android:id="@+id/activity_encrypt_details_minikey_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_distance"
+            android:layout_marginBottom="@dimen/margin_distance"
+            android:gravity="center"
+            android:text="@string/encrypt_details_minikey_info"
+            android:textAppearance="@style/font_explanation_default" />
 
-            <TextView
-                android:id="@+id/activity_encrypt_details_minikey_generatedKey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:minHeight="@dimen/height_min_textbox"
-                android:text="@string/empty_text_generateKey"
-                android:textAppearance="@style/font_msg_default" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/height_min_space" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/or"
-                android:textAppearance="@style/font_explanation_default" />
+        <EditText
+            android:id="@+id/activity_encrypt_details_minikey_inputKey"
+            android:layout_width="@dimen/width_button_default"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textAppearance="@style/font_msg_default" />
 
-            <TextView
-                android:id="@+id/activity_encrypt_details_minikey_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_distance"
-                android:layout_marginBottom="@dimen/margin_distance"
-                android:gravity="center"
-                android:text="@string/encrypt_details_minikey_info"
-                android:textAppearance="@style/font_explanation_default" />
-
-            <EditText
-                android:id="@+id/activity_encrypt_details_minikey_inputKey"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:maxLength="6" />
-
-
-            <Button
-                android:id="@+id/activity_encrypt_details_minikey_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/anwenden" />
-
-        </LinearLayout>
 
     </LinearLayout>
-</RelativeLayout>
+
+    <Button
+        android:id="@+id/activity_encrypt_details_minikey_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:text="@string/anwenden" />
+
+</LinearLayout>
