--- a/app/src/main/res/layout/activity_encrypt_details_plain.xml
+++ b/app/src/main/res/layout/activity_encrypt_details_plain.xml
@@ -1,54 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".activities.ActivityInfo">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen"
+    tools:context=".activities.ActivityInfo">
+
+    <TextView
+        android:id="@+id/activity_encrypt_details_plain_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:layout_weight="0"
+        android:gravity="center"
+        android:text="@string/encrypt_details_plain"
+        android:textAppearance="@style/font_title_alice" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="@dimen/height_min_textbox_fullscreen"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_screen">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/activity_encrypt_details_plain_title"
+        <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/encrypt_details_plain"
-            android:textAppearance="@style/font_explanation_default"
-            android:textSize="24sp"
-            tools:layout_height="60dp" />
+            android:layout_weight="1" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/activity_encrypt_details_plain_info"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_distance"
+            android:layout_marginBottom="@dimen/margin_distance"
             android:gravity="center"
-            android:orientation="vertical">
+            android:text="@string/encrypt_details_plain_info"
+            android:textAppearance="@style/font_explanation_default"
+            tools:layout_height="120dp" />
 
-            <TextView
-                android:id="@+id/activity_encrypt_details_plain_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_distance"
-                android:layout_marginBottom="@dimen/margin_distance"
-                android:gravity="center"
-                android:text="@string/encrypt_details_plain_info"
-                android:textAppearance="@style/font_explanation_default"
-                tools:layout_height="120dp" />
-
-            <Button
-                android:id="@+id/activity_encrypt_details_plain_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_distance"
-                android:text="@string/anwenden" />
-        </LinearLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
     </LinearLayout>
-</RelativeLayout>
+
+    <Button
+        android:id="@+id/activity_encrypt_details_plain_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_distance"
+        android:layout_weight="0"
+        android:text="@string/anwenden" />
+</LinearLayout>
