--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,36 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".activities.ActivityInfo">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen"
+    tools:context=".activities.ActivityInfo">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/activity_encrypt_details_plain_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:layout_weight="0"
+        android:gravity="center"
+        android:text="@string/info_info"
+        android:textAppearance="@style/font_title_alice" />
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_screen">
+        android:layout_weight="0">
 
-        <TextView
-            android:id="@+id/activity_info_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/empty_text_TODO"
-            android:textSize="24sp"
-            tools:layout_height="60dp"
-            android:textAppearance="@style/font_msg_default"/>
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/activity_info_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/margin_distance"
-            android:layout_marginBottom="@dimen/margin_distance"
-            android:gravity="center"
-            android:text="@string/info2"
-            android:textAppearance="@style/font_msg_default"/>
-    </LinearLayout>
-</RelativeLayout>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:padding="@dimen/margin_distance">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_distance"
+                    android:paddingBottom="@dimen/margin_distance">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_distance"
+                        android:layout_marginEnd="@dimen/margin_distance"
+                        android:layout_weight="0"
+                        android:clickable="false"
+                        android:src="@drawable/help"
+                        app:backgroundTint="@color/colorAlice"
+                        app:elevation="0dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/info_text"
+                        android:textAppearance="@style/font_explanation_additional" />
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:padding="@dimen/margin_distance">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_distance"
+                    android:paddingBottom="@dimen/margin_distance">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_distance"
+                        android:layout_marginEnd="@dimen/margin_distance"
+                        android:layout_weight="0"
+                        android:clickable="false"
+                        android:src="@drawable/help"
+                        app:backgroundTint="@color/colorAlice"
+                        app:elevation="0dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/info_spinner"
+                        android:textAppearance="@style/font_explanation_additional" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:padding="@dimen/margin_distance">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_distance"
+                    android:paddingBottom="@dimen/margin_distance">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_distance"
+                        android:layout_marginEnd="@dimen/margin_distance"
+                        android:layout_weight="0"
+                        android:clickable="false"
+                        android:src="@drawable/lock"
+                        app:backgroundTint="@color/colorAlice"
+                        app:elevation="0dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/info_lock"
+                        android:textAppearance="@style/font_explanation_additional" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:padding="@dimen/margin_distance">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_distance"
+                    android:paddingBottom="@dimen/margin_distance">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_distance"
+                        android:layout_marginEnd="@dimen/margin_distance"
+                        android:layout_weight="0"
+                        android:clickable="false"
+                        android:src="@drawable/wrench"
+                        app:backgroundTint="@color/colorAlice"
+                        app:elevation="0dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/info_wrench"
+                        android:textAppearance="@style/font_explanation_additional" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:padding="@dimen/margin_distance">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_distance"
+                    android:paddingBottom="@dimen/margin_distance">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_distance"
+                        android:layout_marginEnd="@dimen/margin_distance"
+                        android:layout_weight="0"
+                        android:clickable="false"
+                        android:src="@drawable/send"
+                        app:backgroundTint="@color/colorAlice"
+                        app:elevation="0dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/info_send"
+                        android:textAppearance="@style/font_explanation_additional" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
