--- a/app/src/main/res/layout/activity_bob.xml
+++ b/app/src/main/res/layout/activity_bob.xml
@@ -36,6 +36,7 @@
             android:id="@+id/activity_bob_button_decrypt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/lock"
@@ -46,35 +47,44 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/activity_bob_button_lastkey"
+            android:layout_width="@dimen/width_button_default"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/activity_bob_button_readKey"
-                android:layout_width="@dimen/width_button_default"
-                android:layout_height="wrap_content"
-                android:text="@string/read_key" />
-
-            <Button
-                android:id="@+id/activity_bob_button_lastkey"
-                android:layout_width="@dimen/width_button_default"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/bob_button_lastkey" />
-        </LinearLayout>
+            android:layout_marginLeft="@dimen/margin_distance"
+            android:layout_marginEnd="@dimen/margin_distance"
+            android:layout_weight="1"
+            android:text="@string/bob_button_lastkey"
+            android:textAppearance="@style/font_explanation_default" />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/activity_bob_button_readMessage"
-            android:layout_width="@dimen/width_button_default"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/read_msg" />
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+            <Switch
+                android:id="@+id/activity_bob_switchKey"
+                android:layout_width="@dimen/width_switch_small"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/schlüssel"
+                android:textAppearance="@style/font_explanation_default"/>
+
+            <Switch
+                android:id="@+id/activity_bob_switchMessage"
+                android:layout_width="@dimen/width_switch_small"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/nachricht"
+                android:textAppearance="@style/font_explanation_default"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
