--- a/app/src/main/res/layout/activity_encrypt_details_minikey.xml
+++ b/app/src/main/res/layout/activity_encrypt_details_minikey.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/margin_screen"
-    tools:context=".activities.ActivityInfo">
+    tools:context=".activities.ActivityAliceInfo">
 
     <TextView
         android:id="@+id/activity_encrypt_details_plain_title"
