--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -1,28 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/margin_screen"
-                tools:context=".activities.ActivityCode">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen"
+    tools:context=".activities.ActivityCode">
 
-    <EditText
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_min_textbox_fullscreen"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/code_info"
+            android:textAlignment="center"
+            android:textAppearance="@style/font_explanation_default" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/height_min_space" />
+
+        <EditText
             android:id="@+id/activity_code_edittext"
-            android:layout_width="281dp"
-            android:layout_height="127dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="140dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:text="Gib hier deinen Freischaltcode ein." android:layout_alignParentEnd="true"
-            android:layout_marginEnd="103dp"/>
+            android:textAlignment="center"
+            android:textAppearance="@style/font_msg_default"/>
+    </LinearLayout>
 
     <Button
-            android:id="@+id/activity_code_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="@string/freischalten" android:layout_marginTop="260dp" android:layout_alignParentTop="true"/>
-</RelativeLayout>
+        android:id="@+id/activity_code_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:text="@string/freischalten"
+        android:textAppearance="@style/font_explanation_default"/>
+
+</LinearLayout>
