--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:text="@string/freischalten"
+        android:text="@string/code_unlock"
         android:textAppearance="@style/font_explanation_default"/>
 
 </LinearLayout>
