--- a/app/src/main/res/layout/activity_eve.xml
+++ b/app/src/main/res/layout/activity_eve.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/margin_screen">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="@dimen/margin_screen">
 
-    <ScrollView
+    <EditText
+        android:id="@+id/activity_eve_text_encrypted"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_min_textbox_halfscreen"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/activity_eve_text_encrypted"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/empty_text_encrypted"
-            android:textAppearance="@style/font_msg_default"
-            tools:layout_height="200dp" />
-    </ScrollView>
+        android:layout_weight="1"
+        android:background="@null"
+        android:gravity="top"
+        android:hint="@string/empty_text_encrypted"
+        android:importantForAccessibility="no"
+        android:importantForAutofill="no"
+        android:inputType="textMultiLine"
+        android:textAppearance="@style/font_msg_default"
+        android:focusable="false"/> <!-- letzte Zeile entfernen um manuelle Texteingabe zu erlauben -->
 
     <LinearLayout
         android:layout_width="match_parent"
