--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -87,7 +87,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/empty_text_encrypted"
-                    android:textAppearance="@style/font_msg_default"/>
+                    android:textAppearance="@style/font_msg_default"
+                android:textIsSelectable="true"/>
         </ScrollView>
 
         <LinearLayout
